# BAT

tuning_examples/margot/bfs/: CMakeLists.txt  Makefile  bfs.cpp  config.json  margot.json
tuning_examples/margot/md/: CMakeLists.txt  Makefile  config.json  margot.json  md.cpp
